change meta name

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Archillect NFT website"
+      content="Archillect NFT"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -32,7 +32,7 @@
     <meta name="twitter:title" content="" />
     <meta
       name="twitter:description"
-      content="Archillect NFT website"
+      content="Archillect NFT"
     />
     <meta name="twitter:image" content="" />
 
@@ -41,7 +41,7 @@
     <meta property="og:title" content="" />
     <meta
       property="og:description"
-      content="Archillect NFT website"
+      content="Archillect NFT"
     />
     <meta property="og:image" content="" />
 
